Fix width overflow on low resolution/widths

--- a/css/uno.css
+++ b/css/uno.css
@@ -1104,6 +1104,7 @@ pre {
 
 .content-wrapper__inner {
 	margin: 0 10%;
+	display: none;
 	padding: 50px 0; }
 
 .footer {
